# config-manager-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
AI/skills/: update-docs.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/config/: config_discovery.rs  config_file.rs  config_format.rs  discovery.rs  mod.rs
src/config/discovery/: common.rs  files_discovery.rs  mod.rs  project_discovery.rs
src/config/models/: config_file.rs  file_metadata.rs  filesystem_entity.rs  mod.rs  project_file.rs
src/config/tools/: mod.rs  tool_registry.rs  tools_data.rs
src/editor/: file_config.rs  file_repository.rs  mod.rs
src/handler/: edit_handler.rs  list_handler.rs  mod.rs
