[package]
name = "config-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "config-manager"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
tempfile = "3.8"
similar = "2.2"
home = "0.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.4"
dirs = "5.0"

[dev-dependencies]
tempdir = "0.3"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
